# Mint2

./: .gitignore  CMakeLists.txt  SConstruct
Mint/: AmpsPdfFlexiFast.h  AmpsPdfFlexiFastCPV.h  AmpsTimeDependentCPV.h  BinFlipChi2.h  DalitzEvent.h  Eff3piSymmetric.h  FitAmpSum.h  FitParameter.h  Flatte.h  GaussianConstraintChi2.h  HadronicParameters.h  ILookLikeFitAmpSum.h  LASSO.h  Minimiser.h  MinuitParameterSet.h  NamedDecayTreeList.h  Neg2LL.h  Neg2LLSum.h  PdfBase.h  PhaseDifferenceCalc.h  SimulMinimisable.h  SplineGenerator.h  TimeBinning.h  TimeDependentGenerator.h  TimeDependentGeneratorOld.h  XYConstraintChi2.h  binflipChi2.h
dict/: Mint2Dict.h  Mint2Dict.xml
docs/: AllPossibleSij_8cpp.html  AllPossibleSij_8cpp_source.html  AllPossibleSij_8h.html  AllPossibleSij_8h_source.html  AmpInitialiser_8cpp.html  AmpInitialiser_8cpp_source.html  AmpInitialiser_8h.html  AmpInitialiser_8h_source.html  AmpPair_8cpp.html  AmpPair_8cpp_source.html  AmpPair_8h.html  AmpPair_8h_source.html  AmpRatios_8cpp.html  AmpRatios_8cpp_source.html  AmpRatios_8h.html  AmpRatios_8h_source.html  Amplitude_8cpp.html  Amplitude_8cpp_source.html  Amplitude_8h.html  Amplitude_8h_source.html  AmpsPdfFlexiFastCPV_8cpp.html  AmpsPdfFlexiFastCPV_8cpp_source.html  AmpsPdfFlexiFastCPV_8h.html  AmpsPdfFlexiFastCPV_8h_source.html  AmpsPdfFlexiFast_8cpp.html  AmpsPdfFlexiFast_8cpp_source.html  AmpsPdfFlexiFast_8h.html  AmpsPdfFlexiFast_8h_source.html  AmpsTimeDependentCPV_8cpp.html  AmpsTimeDependentCPV_8cpp_source.html  AmpsTimeDependentCPV_8h.html  AmpsTimeDependentCPV_8h_source.html  AssociatedDecayTreeItem_8cpp.html  AssociatedDecayTreeItem_8cpp_source.html  AssociatedDecayTreeItem_8h.html  AssociatedDecayTreeItem_8h_source.html  AssociatedDecayTree_8cpp.html  AssociatedDecayTree_8cpp_source.html  AssociatedDecayTree_8h.html  AssociatedDecayTree_8h_source.html  (+2162 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+155 more)
scripts/: mint2-doxygen.sh  mint2-glimpse.sh  run-job.py
(+32 files in other folders)
